deprecated practice